# midi-chord-viewer

./: .gitignore  LICENSE  README.md  app.py  build.bat  build_installer.bat  midi_chord_viewer.spec  piano_keyboard.py  pyproject.toml  requirements.txt  run.bat  run.sh
assets/soundfonts/: README.md
docs/: PROJECT_OVERVIEW.md  RUST_VISUALIZER.md
installer/: midi_chord_lab.iss
midi_lab/: __init__.py  bootstrap.py  branding.py  diagnostics.py  main.py  resources.py
midi_lab/core/: __init__.py  analysis_build_worker.py  analysis_report.py  chord_rules.py  constants.py  edit_history.py  file_association.py  functional_harmony.py  harmony.py  instruments.py  launch_args.py  load_worker.py  midi_controls.py  midi_tempo.py  midi_visualizer.py  note_events.py  performance_analytics.py  (+15 more)
runtime_hooks/: pyi_rth_midi_lab_dll.py
rust/midi_viz/: Cargo.toml
rust/midi_viz/src/: engine.rs  export.rs  lib.rs  pybind.rs
rust/midi_viz/src/midi/: event.rs  mod.rs  parse.rs  ring.rs  scheduler.rs  timeline.rs
rust/midi_viz/src/render/: gpu_init.rs  layout.rs  mod.rs  particles.rs  renderer.rs  scene.rs  spectrum_anim.rs
rust/midi_viz/src/render/shaders/: note.wgsl  particle_compute.wgsl  particle_draw.wgsl  particle_emit.wgsl
scripts/: build_release.ps1  build_rust.bat  maturin_ci.bat  register_midi_association.bat  run_maturin.ps1  setup_soundfont.ps1
tests/: test_chord_rules.py  test_gpu_visualizer.py  test_midi_controls.py  test_midi_tempo.py  test_midi_visualizer.py  test_playback_channels.py  test_playback_schedule.py  test_soundfont.py  test_visualizer_engine.py
(+47 files in other folders)
