[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "midi-chord-lab"
version = "2.14.0"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "music21>=9.1.0",
    "matplotlib>=3.8.0",
    "mido>=1.3.0",
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",
]

[tool.maturin]
manifest-path = "rust/midi_viz/Cargo.toml"
module-name = "midi_viz"
python-source = "."
features = ["python"]
